Fixed button width on small devices

--- a/src/components/streamSelect/StreamSelect.css
+++ b/src/components/streamSelect/StreamSelect.css
@@ -76,6 +76,7 @@ button {
   color: white;
   display: block;
   width: 30%;
+  min-width: 55px;
   margin-left: 10px;
   height: 29px;
   transition: transform 0.3s;
